Cambios en los paneles de ver jugadores y equipos. Cambios en actualizar menu principal competicion cerrada